2007-02-12  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by .

        - reverting change to not cause regressions and performance problems.

        * fast/loader/local-JavaScript-from-local-expected.txt: Removed.
        * fast/loader/local-JavaScript-from-local.html: Removed.
        * fast/loader/local-iFrame-source-from-local-expected.txt: Removed.
        * fast/loader/local-iFrame-source-from-local.html: Removed.
        * fast/loader/local-image-from-local-expected.txt: Removed.
        * fast/loader/local-image-from-local.html: Removed.

2007-02-12  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=12123
          REGRESSION: Incomplete repaint of floats' overflows

        - updated results for http://bugs.webkit.org/show_bug.cgi?id=10116
          REGRESSION: Menu item drawn 2 pixels short on WWDC 2006 Attendee Site

        * css1/formatting_model/inline_elements-expected.checksum:
        * css1/formatting_model/inline_elements-expected.png:
        * css1/formatting_model/inline_elements-expected.txt:
        * css2.1/t0905-c414-flt-00-d-expected.txt:
        * css2.1/t0905-c414-flt-01-d-g-expected.txt:
        * css2.1/t0905-c414-flt-02-c-expected.txt:
        * css2.1/t0905-c414-flt-03-c-expected.txt:
        * css2.1/t0905-c414-flt-04-c-expected.txt:
        * css2.1/t0905-c414-flt-wrap-01-d-g-expected.txt:
        * css2.1/t0905-c5525-fltcont-00-d-g-expected.txt:
        * css2.1/t0905-c5525-fltwidth-02-c-g-expected.txt:
        * css2.1/t0905-c5525-fltwidth-03-c-g-expected.txt:
        * css2.1/t090501-c414-flt-02-d-g-expected.txt:
        * css2.1/t090501-c414-flt-03-b-g-expected.txt:
        * fast/backgrounds/repeat/negative-offset-repeat-expected.txt:
        * fast/block/float/008-expected.txt:
        * fast/block/float/013-expected.checksum:
        * fast/block/float/013-expected.txt:
        * fast/block/float/029-expected.txt: